k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: have-i-been-stolen
  namespace: web
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - haveibeenstolen.zoomoid.de
    secretName: have-i-been-stolen-tls
  rules:
  - host: haveibeenstolen.zoomoid.de
    http:
      paths:
      - path: /
        backend:
          serviceName: have-i-been-stolen
          servicePort: 80
